# voicsh

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_CONTINUOUS.md  BENCHMARKING.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  INSTALL.md  LICENSE  RASPBERRY_PI.md  README.md  RELEASING.md  ROADMAP.md  audit.toml  build.rs
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude.yml  release.yml
benches/: wav_transcription.rs
gnome/: dev.sh
gnome/voicsh@voic.sh/: extension.js  metadata.json
gnome/voicsh@voic.sh/schemas/: org.gnome.shell.extensions.voicsh.gschema.xml
gnome/voicsh@voicsh.dev/: extension.js  metadata.json  stylesheet.css
gnome/voicsh@voicsh.dev/schemas/: org.gnome.shell.extensions.voicsh.gschema.xml
scripts/: build-pi-deb.sh  patch-cuda-rsqrt.sh  voicsh-gadget-setup.sh  voicsh-gadget.service  voicsh-pi.service
src/: app.rs  benchmark.rs  cli.rs  config.rs  config_watch.rs  defaults.rs  diagnostics.rs  dictionary.rs  error.rs  gnome_extension.rs  gpio.rs  hallucination_filters.toml  init.rs  lib.rs  main.rs  output.rs  pipeline.rs  recording.rs  sys.rs  systemd.rs
src/audio/: capture.rs  mod.rs  recorder.rs  vad.rs  wav.rs
src/continuous/: adaptive_chunker.rs  chunker_station.rs  error.rs  injector_station.rs  mod.rs  pipeline.rs  station.rs  transcriber_station.rs  types.rs  vad_station.rs
src/correction/: candle_t5.rs  corrector.rs  hybrid.rs  mod.rs  prompt.rs  station.rs  symspell.rs
src/daemon/: handler.rs  mod.rs
src/inject/: environment.rs  focused_window.rs  injector.rs  mod.rs  portal.rs  usb_hid.rs
src/input/: focused_window.rs  injector.rs  mod.rs  portal.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src/models/: catalog.rs  correction_catalog.rs  download.rs  mod.rs  remote.rs
src/pipeline/: adaptive_chunker.rs  chunker_station.rs  error.rs  injector_station.rs  latency.rs  mod.rs  orchestrator.rs  post_processor.rs  sink.rs  station.rs  transcriber_station.rs  types.rs  vad_station.rs
src/streaming/: chunker.rs  frame.rs  mod.rs  pipeline.rs  ring_buffer.rs  silence_detector.rs  stitcher.rs  transcriber.rs
src/stt/: fan_out.rs  mod.rs  transcriber.rs  whisper.rs
test-containers/: Dockerfile.vulkan  gnome-test.sh
tests/: backend_transcription.rs  multilang_correction_test.rs  symspell_e2e_audio_test.rs  symspell_whitelist_languages_test.rs
website/: .gitignore  go.mod  hugo.toml
website/layouts/_default/_markup/: render-link.html
website/layouts/partials/custom/: footer.html
