[package]
name = "voicsh"
version = "0.0.1"
edition = "2024"
rust-version = "1.93"
description = "Voice typing for Wayland Linux"
license = "MIT"
repository = "https://github.com/burka/voicsh"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Concurrency
crossbeam-channel = "0.5"

# XDG Desktop Portal (RemoteDesktop for GNOME key injection)
ashpd = { version = "0.12", default-features = false, features = ["tokio"], optional = true }

# CLI
clap = { version = "4", features = ["derive"], optional = true }

# Paths
dirs = { version = "5", optional = true }

# System
libc = "0.2"

# Audio
cpal = { version = "0.15", optional = true }

# WAV file parsing
hound = "3.5"

# HTTP client for model downloads
reqwest = { version = "0.13", features = ["stream"], optional = true }
sha1 = { version = "0.10", optional = true }
indicatif = { version = "0.17", optional = true }
futures-util = { version = "0.3", optional = true }

# Speech-to-text (requires cmake to build)
whisper-rs = { version = "0.15", optional = true }

[features]
default = ["full"]
full = ["whisper", "cpal-audio", "model-download", "cli", "portal"]
whisper = ["whisper-rs"]
cpal-audio = ["dep:cpal"]
model-download = ["dep:reqwest", "dep:sha1", "dep:indicatif", "dep:futures-util"]
cli = ["dep:clap", "dep:dirs"]
portal = ["dep:ashpd"]
benchmark = ["dep:sysinfo"]
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
hipblas = ["whisper-rs/hipblas"]
openblas = ["whisper-rs/openblas"]

[dependencies.sysinfo]
version = "0.33"
optional = true

[dev-dependencies]
tempfile = "3"
sysinfo = "0.33"
criterion = "0.5"

[[bin]]
name = "benchmark-transcription"
path = "src/bin/benchmark-transcription.rs"
required-features = ["whisper", "benchmark", "model-download", "cli"]

[[bench]]
name = "wav_transcription"
harness = false

[profile.release]
lto = true
strip = true
