[package]
name = "voicsh"
version = "0.2.2"
edition = "2024"
rust-version = "1.93"
description = "Voice typing for Wayland Linux"
license = "MIT"
repository = "https://github.com/burka/voicsh"
readme = "README.md"
keywords = ["voice", "audio", "whisper", "wayland", "accessibility"]
categories = ["command-line-utilities", "multimedia::audio"]
exclude = [
    ".github/",
    "ARCHITECTURE.md",
    "BENCHMARKING.md",
    "CLAUDE.md",
    "CONTRIBUTING.md",
    "DEVELOPMENT.md",
    "ROADMAP.md",
    "benches/",
    "gnome/dev.sh",
    "scripts/",
    "test-containers/",
    "tests/",
]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Concurrency
crossbeam-channel = "0.5"

# XDG Desktop Portal (RemoteDesktop for GNOME key injection)
ashpd = { version = "0.12", default-features = false, features = ["tokio"], optional = true }

# CLI
clap = { version = "4", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }

# Paths
dirs = { version = "6", optional = true }

# System
libc = "0.2"
owo-colors = { version = "4", optional = true }

# Audio
cpal = { version = "0.17", optional = true }

# WAV file parsing
hound = "3.5"

# HTTP client for model downloads
reqwest = { version = "0.13", features = ["stream"], optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
indicatif = { version = "0.18", optional = true }
futures-util = { version = "0.3", optional = true }

# Human-friendly duration parsing (e.g., "30s", "5m", "1h30m")
humantime = { version = "2.3", optional = true }

# Speech-to-text (requires cmake to build)
whisper-rs = { version = "0.15", optional = true }

# Error correction (T5 via Candle)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["onig"], optional = true }
hf-hub = { version = "0.4", optional = true }

# Error correction (SymSpell)
symspell = { version = "0.4", optional = true }

[features]
default = ["full"]
full = ["whisper", "cpal-audio", "model-download", "cli", "portal", "benchmark", "symspell", "error-correction"]
whisper = ["whisper-rs"]
cpal-audio = ["dep:cpal"]
model-download = ["dep:reqwest", "dep:sha1", "dep:sha2", "dep:indicatif", "dep:futures-util", "dep:dirs"]
cli = ["dep:clap", "dep:clap_complete", "dep:dirs", "dep:humantime", "dep:owo-colors"]
portal = ["dep:ashpd", "dep:dirs"]
benchmark = ["dep:sysinfo", "dep:flate2", "whisper", "model-download", "cli"]
symspell = ["dep:symspell"]
error-correction = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub", "model-download"]
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
hipblas = ["whisper-rs/hipblas"]
openblas = ["whisper-rs/openblas"]

[dependencies.sysinfo]
version = "0.38"
optional = true

[dependencies.flate2]
version = "1.0"
optional = true

[dev-dependencies]
tempfile = "3"
sysinfo = "0.38"
criterion = "0.8"

[[bench]]
name = "wav_transcription"
harness = false

[profile.release]
lto = true
strip = true
